# fastest-path-finder

./: .gitignore  README.md  pyproject.toml
src/fastest_path_finder/: __main__.py  config.yaml
src/fastest_path_finder/app/: navigator.py
src/fastest_path_finder/conf/: root.py
src/fastest_path_finder/mapping/: map_data.py
src/fastest_path_finder/pathfinding/: a_star.py
src/fastest_path_finder/visualizing/: path_visualizer.py
